--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 
 <body>
-
+<form action="">
+  <input type="text" id="gif-search">
+  <input type="submit">
+</form>
 <script src="app.js"></script>
 </body>
 
