--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<form action="">
+<form action="" class="gif-form">
   <input type="text" id="gif-search">
   <input type="submit">
 </form>
