added gif container

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <input type="text" id="gif-search">
   <input type="submit">
 </form>
+<div id="gif-container"></div>
 <script src="app.js"></script>
 </body>
 
