--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 </head>
 
 <body>
-<form action="" class="gif-form">
-  <input type="text" id="gif-search">
-  <input type="submit">
-</form>
-<button type ="click" class="remove-button">Remove GIFs</button>
-<div id="gif-container"></div>
-<script src="app.js"></script>
+  <form action="" class="gif-form">
+    <input type="text" id="gif-search">
+    <input type="submit">
+  </form>
+  <button type="click" class="remove-button">Remove GIFs</button>
+  <div id="gif-container"></div>
+
+  <script type="module" src="app.js"></script>
 </body>
 
 </html>
